fixing carousel cards gap / title carousel gap

--- a/src/app/features/car-rental/pages/car-rental-home/car-rental-home.component.scss
+++ b/src/app/features/car-rental/pages/car-rental-home/car-rental-home.component.scss
@@ -108,6 +108,7 @@
         align-items: center;
         justify-content: space-between;
         padding: 10px 20px;
+        margin-bottom: 20px;
 
         h2 {
           font-weight: 700;
